# pls

./: .gitignore  Cargo.toml  Makefile  README.md  README.txt  build.rs  notes.org  requirements.txt
.github/workflows/: ci.yml
src/: main.rs  show.rs  state.rs  util.rs  window.rs
src/main/python/: main.py  pls.py
src/main/resources/base/: styles.qss
test/flat-show/: S1E1.txt  S1E2.txt  S2E1.txt  S2E2.txt
test/pls/: flat.toml  nested.toml  pls.toml
