[package]
name = "pls"
version = "0.1.0"
authors = ["Tomas Sedovic <tomas@sedovic.cz>"]
license = "AGPL-3.0-or-later"
edition = "2021"
exclude = ["/test/**", "/venv/**", "/bin/**"]


[dependencies]
anyhow = "1.0"
directories = "4.0"
egui_glow = { version = "0.16", default-features = false, features = ["epi", "winit"] }
egui = { version = "0.16" }
epi = { version = "0.16" }
toml_edit = "0.10"
opener = "0.5"
hostname = "0.3"
humanesort = "0.1.0-alpha"

[features]
default = ["test"]
test = []
