[package]
name = "pls"
version = "0.1.0"
authors = ["Tomas Sedovic <tomas@sedovic.cz>"]
license = "AGPL-3.0-or-later"
edition = "2021"
build = "build.rs"
exclude = ["/test/**", "/venv/**", "/bin/**", "pls.log"]
default-run = "pls"

[[bin]]
name = "deploy"

# Only compile winres on Windows targets.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1.0"
directories = "4.0"
egui_glow = { version = "0.16", default-features = false, features = ["epi", "winit"] }
egui = { version = "0.16" }
epi = { version = "0.16" }
hostname = "0.3"
humanesort = "0.1.0-alpha"
log = "0.4.17"
log-panics = { version = "2.0", features = ["with-backtrace"] }
opener = "0.5"
simplelog = { version = "0.12" }
toml_edit = "0.10"
zip = "0.6.2"

[features]
default = ["test"]
test = []
linux-extra-features = []
macos-extra-features = []
windows-extra-features = []
